--- a/sample.html
+++ b/sample.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        a#a1{
+            display:block;
+            width: 700px;
+            height:100px;
+            background-color: green; 
+            border:10PX solid pink;
+
+            text-decoration:none;
+            color:red;
+            font-size:4em;
+            font-weight: bold;
+            /* xyb(blur-dhundhlu)c*/
+            text-shadow:10px 10px 10px black
+        }
+    </style>
 </head>
 <body>
-    
+    <a href="https://www.google.com" id="a1">go to google website</a>
+    <a href="https://www.facebook.com" id="a2">go to facebook website</a>
 </body>
 </html>
